Bugzilla-34089, NICPS-49: added "add attachments" feature on Mobile HTML Client
[Features]
- Attachment button is shown when Cc/Bcc is clicked.
- A file is uploaded when Save or Send button is clicked
- Multiple files can be selected. It depends on a device OS/browser.

[Known issue]
- All fields (subject, message body, recipients and attachments) become blank if a message size exceeds the limit. If you save the composing message before uploading an attachment, you can find it in Drafts folder.

--- a/WebRoot/css/iphone.css
+++ b/WebRoot/css/iphone.css
@@ -501,6 +501,9 @@ form {
 .ZhACBCc {
     z-index: 9030;
 }
+.ZhACAttach {
+    z-index: 9020;
+}
 .prev_button, .mid_button, .next_button {
     border: 0px !important;
     margin: 0px !important;
